# rl4rec

./: .gitattributes  .gitignore  pyproject.toml
CIKIM19/: item.csv.REMOVED.git-id  user_behavior.csv.REMOVED.git-id
src/: spark.py
src/command/: eval.py  train.py
src/dataset/: amazon.py  cikim19.py  custom_typings.py  dataset.py  eval.py  retailrocket.py  train.py
src/model/: agent.py  baseline.py  nn.py  policy.py
